--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
     font-size: 26 px;
     line-height: 1.19;
     text-decoration: none;
-    margin-left: 215px;
     margin-top: 24px;
 }
 .webstudio1{
@@ -199,8 +198,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: left;
-    padding-top: 60px;
-}
+    padding-top: 60px;}
 .list{
     list-style-type: none;
     text-decoration: none;
@@ -312,7 +310,7 @@ h1{
      font-size: 16px;
     line-height: 1.17;
 }
-.container{
+.container-wrapper{
     display: flex;
     width: 100%;
     padding: 0 15px;
@@ -320,7 +318,18 @@ h1{
     max-width: 1600px;
     flex-direction: row;
     align-items: center;
-    
+    justify-content: space-between;
+}
+.container{
+    display: flex;
+        width: 100%;
+        padding: 0 15px;
+        margin: 0 auto;
+        max-width: 1200px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
 }
 .container-two{
     display: flex;
