--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+}
 body {
     /* font-family: 'Raleway', sans-serif;*/
     font-family: 'Roboto', sans-serif;
@@ -18,20 +24,23 @@ body {
     --border-karta: rgba(236, 236, 236, 1);
 }
 .webstudio {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26 px;
-    line-height: 1.19;
-    text-decoration: none;
-    margin-top: 24px;
+    font-family: "Raleway";
+        font-weight: 700;
+        font-size: 26px;
+        line-height: 31px;
+        text-decoration: none;
+        text-align: center;
+        display: flex;
+        margin-right: 93px;
+    
+
 }
 .webstudio1{
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    font-size: 26 px;
+    font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
-    margin-left: 215px;
     margin-bottom: 20px;
 }
 .logo {
@@ -39,7 +48,7 @@ body {
     
 }
 .logo2{ color:var(--logo-black);
-    margin-right: 93px;
+    
 }
 .logo3 {
   color:  var(--main-white); 
@@ -113,10 +122,9 @@ body {
     line-height: 1.71;
     color: var(--main-white);
     justify-content: left;
-    margin-left: 215px;
     padding: 0;
     margin-bottom: 9px;
-
+    font-style: normal;
 }
 
 .kontakt_stopka {
@@ -194,20 +202,23 @@ body {
 .down_footer{
     background-color: var(--background-grey);
     height: 252px;
-    max-width: 1600px;
     display: flex;
     flex-direction: column;
     justify-content: left;
-    padding-top: 60px;}
+    padding-top: 60px;
+    margin-top: 94px;
+
+}
+    
 .list{
     list-style-type: none;
     text-decoration: none;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-    gap: 46px;
+    gap: 30px;
     align-items: center;
-    
+    margin: 0;
+    padding: 0px;
 }
 .mail {
     text-decoration: underline;
@@ -231,13 +242,12 @@ a:active {
 }*/
 .sekcja1{background-color: var(--background-grey);
     text-decoration: none;
-    max-width: 1600px;
-    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;  
-    
+    padding-top: 200px;
+    padding-bottom: 280px;
 }
 
 h1{ 
@@ -264,13 +274,12 @@ h1{
         border-radius: 4px;
         padding: 10px 41px;
         margin-top: 40px;
-        
-       
 }
 .lorem{
     color: var(--black-main);
     font-size: 14px;
     line-height: 1.14;
+    padding-bottom: 10px;
 }
 
 .text{
@@ -283,55 +292,50 @@ h1{
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
-    margin-top: 94px;
-    margin-bottom: 50px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 .sekcja2 {
     background-color: var(--background-white);
     text-decoration: none;
-    max-width: 1600px;
-    height: 648px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 94px;
-    margin: 0 auto;
-    padding: 0 15px;
+    max-width: 1600px;
+    
 }
 .name{
     color: var(--black-main);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.17;
+    padding: 30px 0 10px;
+
+    
 }
 .position{
     color: var(--main-silver);
      font-size: 16px;
     line-height: 1.17;
+    padding-bottom: 30px;
 }
-.container-wrapper{
+.wrapper{
     display: flex;
     width: 100%;
-    padding: 0 15px;
-    margin: 0 auto;
-    max-width: 1600px;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 .container{
-    display: flex;
-        width: 100%;
-        padding: 0 15px;
-        margin: 0 auto;
-        max-width: 1200px;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+    width: 100%;
+    padding: 0 15px;
+     margin: 0 auto;
+      max-width: 1200px;
 
 }
-.container-two{
+.ipsum-style{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -343,9 +347,10 @@ h1{
     max-width: 1200px;
     margin-bottom: 10px;
     margin-top: 94px;
+    gap: 30px;
     }
 
-    .container-three{
+    .solution-style{
     list-style-type: none;
     text-decoration: none;
     display: flex;
@@ -362,13 +367,18 @@ h1{
 
 .header{display: flex;
     align-items: center;
-    margin-left: 93px;
-    gap: 40 px;
     height: 80px;
+
 }
 .face{ 
     background-color: var(--face-foto);
     text-align: center;
+    border-radius: 0px 0px 4px 4px;
+    padding-bottom: 94px;
+    width: 270px;
+    height: 368px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
 }
 .list2{
 list-style-type: none;
@@ -376,7 +386,6 @@ text-decoration: none;
 display: flex;
 flex-direction: column;
 justify-content: left;
-margin-left: 215px;
 padding: 0px;
 padding-top: 0px;
 margin-bottom: 9px;
@@ -406,10 +415,13 @@ list-style-type: none;
     margin: 0 auto;
     gap: 30px;
     margin-bottom: 94px;
+    calc((100% - 20px) / 3);
 }
 .border-img{
     border: 1px solid;
     border-color: var(--border-image);
+    width: 370px;
+    
 }
 header{
 border-bottom: 1px solid;
