--- a/css/styles.css
+++ b/css/styles.css
@@ -391,12 +391,17 @@ h1{
     text-align: center;
     border-radius: 0px 0px 4px 4px;
     padding-bottom: 94px;
-    width: 270px;
+    width: calc((100% - (3 * 30px)) / 4);
     height: 368px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    
 }
+
+.sizelorem{width: calc((100% - (3 * 30px)) / 4);  
+}
+
+
 .list2{
+
 list-style-type: none;
 text-decoration: none;
 display: flex;
