--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,11 @@ a:active {
 .section{
     padding-top: 94px;
     padding-bottom: 94px;
+    
+}
+.advantages{padding-top: 94px;
+    padding-bottom: 0px;
+
 }
 .sekcja1{
     text-decoration: none;
